[metadata]
name = litemark
version = file: VERSION
url = https://github.com/pyrustic/litemark
author = Pyrustic Evangelist
author_email = pyrustic@protonmail.com
maintainer = Pyrustic Evangelist
maintainer_email = pyrustic@protonmail.com
description = Lightweight Markdown dialect for Python desktop apps
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    markdown
    litemark
    lightweight
    pyrustic
    codegame
    desktop
    gui
    viewer
    renderer
    markup
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    shared

[options.entry_points]
console_scripts =
    litemark = litemark.__main__:main
